Fix some alignment

--- a/css/site.css
+++ b/css/site.css
@@ -33,10 +33,10 @@ p {
 
 .follow {
   font-weight: 600;
-  font-size: 2rem;
+  font-size: 1.5rem;
   line-height: 80px;
   vertical-align: middle;
-  margin-left: 20px;
+  margin-left: 10px;
 }
 
 .links a {
